# ftcc

./: .pre-commit-config.yaml  README.md  contributing.md  main.py  pyproject.toml  ruff.toml  translation.md
.github/ISSUE_TEMPLATE/: compilation-layer.md
.github/workflows/: main.yml
ftcc/: compilation_graph.py
ftcc/compilation_layers/: base_layer.py  mqt_encoding_layer.py  pyzx_layer.py  topologiq_layer.py  tqec_layer.py
ftcc/tests/: test_lattice_surgery_end_to_end.py  test_mqt_lattice_surgery_end_to_end.py
ftcc/translation_layers/: mqt_to_pyzx.py  pyzx_to_topologiq.py  topologiq_to_tqec.py
scripts/: build_and_activate_venv.sh  build_hook.py
src/ftcc/: __init__.py  compilation_graph.py  compilation_registry.py  get_requirements.py  pipeline.py  run_with_venv.py  translation_registry.py
src/ftcc/compilation_layers/: __init__.py  base_layer.py  mqt_encoding_layer.py  nwqec_layer.py  pyzx_layer.py  qiskit_layer.py  topologiq_layer.py  tqec_layer.py
src/ftcc/translation_layers/: mqt_to_nwqec.py  mqt_to_pyzx.py  mqt_to_topologiq.py  nwqec_to_qiskit_bicycle.py  nwqec_transpilation_to_pauli.py  pyzx_to_topologiq.py  qiskit_pbc_to_bicycle.py  topologiq_to_tqec.py
tests/: test_build_scripts.py  test_lattice_surgery_end_to_end.py  test_mqt_lattice_surgery_end_to_end.py  test_mqt_lattice_surgery_end_to_end_unoptimized.py  test_nwqec_end_to_end.py  test_nwqec_pbc.py  test_nwqec_transpilation.py  test_pipeline.py  test_pyzx_compilation.py  test_qiskit_bicycle.py  test_qiskit_pbc.py
