[project]
name = "ftcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autqec>=1.0.1",
    "mqt>=0.1.1",
    "mqt-qecc>=1.9.0",
    "networkx>=3.5",
    "pre-commit>=4.5.1",
    "qiskit>=2.1.2",
    "sympy>=1.14.0",
]

[tool.uv.sources]
topologiq = { git = "https://github.com/tqec/topologiq" }
tqec = { git = "https://github.com/tqec/tqec.git", rev = "e5d927e" }
ucc = { git = "https://github.com/unitaryfoundation/ucc", rev = "596-nwqec-pass" }

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
tqec = [
    "tqec",
]
pyzx = [
    "pyzx>=0.9.0",
]
ucc = [
    "ucc",
]
topologiq = [
    "topologiq",
]

[tool.uv]
conflicts = [
    [
        { group = "tqec" },
        { group = "ucc" },
    ]
]

[build-system]
requires = ["uv_build >= 0.9.26, <0.10.0"]
build-backend = "uv_build"
