[project]
name = "ftcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autqec>=1.0.1",
    "networkx>=3.5",
    "pre-commit>=4.5.1",
    "qiskit>=2.1.2",
    "sympy>=1.14.0",
    "pytest-cov>=7.1.0",
]

[tool.uv.sources]
# topologiq = { git = "https://github.com/tqec/topologiq", rev = "15d3ed4" }
topologiq = { git = "https://github.com/tqec/topologiq", rev = "3f78cc2" }
# tqec = { git = "https://github.com/tqec/tqec.git", rev = "e5d927e" }
tqec = { git = "https://github.com/tqec/tqec.git", rev = "f30746c" }
ucc = { git = "https://github.com/unitaryfoundation/ucc.git", rev = "596-nwqec-pass" }
mqt-qecc = { git = "https://github.com/munich-quantum-toolkit/qecc.git" }
nwqec = { git = "https://github.com/pnnl/nwqec" }

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "tomli-w",
]
TQECLayer = [
    "tqec",
]
PyZXLayer = [
    "pyzx>=0.9.0",
]
ucc = [
    "qbraid==0.10.0",
    "ucc",
    "urllib3>=2.6.2",
]
TopologiqLayer = [
    "topologiq",
    "qiskit==2.1.2",
]
QiskitPBCLayer = [
    "qiskit>=2.3.0",
]
QiskitBicycleLayer = [
    "qiskit>=2.3.0",
]
NWQECTranspilationLayer = [
    "nwqec",
]
NWQECPauliLayer = [
    "nwqec",
]
MQTLayer = [
    "mqt>=0.1.1",
    "mqt-qecc>=1.9.0",
]

[tool.uv]
conflicts = [
    [
        { group = "TQECLayer" },
        { group = "ucc" },
    ],
    [
        { group = "TopologiqLayer" },
        { group = "QiskitPBCLayer" }
    ],
    [
        { group = "TopologiqLayer" },
        { group = "QiskitBicycleLayer" }
    ],
    [
        { group = "MQTLayer" },
        { group = "TQECLayer" }
    ],
    [
        { group = "MQTLayer" },
        { group = "TopologiqLayer" }
    ],
    [
        { group = "TopologiqLayer" },
        { group = "ucc" }
    ],
]

[tool.pytest.ini_options]
markers = [
    "build: basic build_tests",
    "lattice_surgery: tests using lattice surgery tools"
]

[tool.hatch.build.hooks.custom]
path = "scripts/build_hook.py"

[build-system]
requires = [
    "hatchling",
    "tomli-w",
]
build-backend = "hatchling.build"
# requires = ["uv_build >= 0.9.26, <0.10.0"]
# build-backend = "uv_build"
